--- a/my-react-app/src/styles/CartStyle.css
+++ b/my-react-app/src/styles/CartStyle.css
@@ -135,6 +135,25 @@
 #cart-checkout-btn:hover {
   background-color: var(--btn-hover-bg);
 }
+.cart-empty-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+.cart-empty-text {
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 18px;
+}
+.cart-empty-image {
+  display: flex;
+  width: 100px;
+  height: 100px;
+}
 @media (max-width: 600px) {
     .cart-full-page-container {
       display: flex;
